# whoot

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
src/: camera.rs  card.rs  deck.rs  hand.rs  lib.rs  loading.rs  main.rs  utils.rs
src/board/: axial.rs  board.rs  board_data.rs  edge.rs  hex.rs  mod.rs  pickable_pos.rs  vertex.rs
