[package]
name = "whoot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nithin Muthukumar"]
description = ""
repository = ""

[features]

[dependencies]
bevy = { version = "0.10.1"} 
bevy_asset_loader = "0.16.1"
bevy_kira_audio = "0.15.0"
leafwing-input-manager = "0.9.2"
