[package]
name = "whoot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Nithin Muthukumar"]
description = ""
repository = ""

[features]

[dependencies]
bevy = "0.11.0"
bevy_asset_loader = "0.17.0"
bevy_tweening = "0.8"
bevy_kira_audio = "0.16.0"
leafwing-input-manager = "0.10.0"
random = "0.14.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
bevy_pancam = "0.9.0"
# bevy = { version = "0.10.1"} 
# bevy_asset_loader = "0.16.1"
# bevy_kira_audio = "0.15.0"
# leafwing-input-manager = "0.9.2"
# random = "0.14.0"
# bevy_tweening = {git="https://github.com/djeedai/bevy_tweening"}

